--- a/index.html
+++ b/index.html
@@ -33,21 +33,13 @@
                 This is included to demonstrate navigation.  You will likely want
                 to use JavaScript to generate a list of similar structure.
             -->
+            <div id="loading" style="display:none; margin-top:50px" class="mdl-progress mdl-js-progress mdl-progress__indeterminate"></div>
             <ul class="mdl-list" id="locationList">
-              <li class="mdl-list__item mdl-list__item--two-line" onclick="viewLocation(0);">
-                <span class="mdl-list__item-primary-content">
-                  <img class="mdl-list__item-icon" id="icon0" src="images/loading.png" class="list-avatar" />
-                  <span>Location A</span>
-                  <span id="weather0" class="mdl-list__item-sub-title">Weather summary</span>
-                </span>
-              </li>
-              <li class="mdl-list__item mdl-list__item--two-line" onclick="viewLocation(1);">
-                <span class="mdl-list__item-primary-content">
-                  <img class="mdl-list__item-icon" id="icon1" src="images/loading.png" class="list-avatar" />
-                  <span>Location B</span>
-                  <span id="weather1" class="mdl-list__item-sub-title">Weather summary</span>
-                </span>
-              </li>
+				<li class="mdl-list__item mdl-list__item--two-line" onclick="viewLocation('+i+');">
+	              	<span class="mdl-list__item-primary-content">
+	              	<img class="mdl-list__item-icon" id="icon0" src="images/loading.gif" class="list-avatar" />             
+	                </span>
+                </li>'
             </ul>
             <!--   End sample locations list.   -->
 
@@ -55,8 +47,11 @@
         </div>
 
         <!--   JavaScript files:   -->
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+        <script type="text/javascript" src="http://ajax.cdnjs.com/ajax/libs/json2/20110223/json2.js"></script>
         <script src="js/dateExtensions.js"></script>
         <script src="js/locationWeatherCache.js"></script>
         <script src="js/mainPage.js"></script>
+    async defer></script>
     </body>
 </html>
